--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,15 @@
+{% load static %}
 <html>
     <head>
         <title>BLOG DE TORTUGAS</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
         <div>
             
-            <h1><a href="#">BLOG DE TORTUGAS</a></h1>
+            <h1><a href="/">BLOG DE TORTUGAS</a></h1>
 
             <p>¿QUÉ SON LAS TORTUGAS?</p>
         </div>
@@ -37,14 +41,11 @@
 
         {% for post in posts %} 
 
-        <dir>
-            <p> Articulo Publicado: {{ post.published_date }}</p>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-        </dir>    
-    {% endfor %}
-
-
-
+            <dir>
+                <p> Articulo Publicado: {{ post.published_date }}</p>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </dir>    
+        {% endfor %}
     </body>
 </html>    
